formatted code and extracted colors to variables

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .sidebar {
   margin-top: 4rem;
   background: var(--color-primary-dark);
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid var(--color-secondary);
   height: calc(100vh - 4rem);
   position: fixed;
 
