--- a/src/app/shared/abstract-list/abstract-list.component.scss
+++ b/src/app/shared/abstract-list/abstract-list.component.scss
@@ -10,7 +10,7 @@
 
 .btn-add {
   background: var(--color-primary-dark);
-  color: #ffffff;
+  color: var(--color-secondary);
 
   &:hover {
     background: var(--color-primary);
