--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -5,7 +5,7 @@
 
 .btn {
   border: none;
-  color: #ffffff;
+  color: var(--color-secondary);
 
   &:hover {
     background-color: var(--color-primary);
@@ -14,7 +14,7 @@
 
 .header-search {
   background-color: var(--color-primary);
-  color: #ffffff;
+  color: var(--color-secondary);
   border: 0;
 
   @media (min-width: 993px) {
@@ -31,7 +31,7 @@
 }
 
 .header-search::placeholder {
-  color: #ffffff;
+  color: var(--color-secondary);
 }
 
 .header-icon {
